BUG plxShow::templateCss() : mauvais chemin dans le test existence fichier css (contribution danielsan)
BUG plxFeed::getRssArticles() : pas de réécriture d'url dans la balise atom:link (contribution petitchevalroux)
BUG plxFeed: erreur date dans les flux rss si aucun article
BUG plxPlugins: variable default_lang mal renseignée -> mauvais chargement du fichier de langue des plugins
Sécurité: Faille XSS possible sur la récupération de l'adresse ip d'un visiteur (remerciement à The Lizard King)
Sécurité: Mauvais contrôle des tokens (remerciement à The Lizard King)
Sécurité: Suppression du champ contenant la solution du captcha dans le formulaires des commentaires (remerciement à The Lizard King)

## PLUXML 5.1.6 (sortie : 16/04/2012) ##

[+] Administration: Paramètres > Option d'affichage -> option pour afficher le nom des catégories même si elles ne contiennent pas d'article
[+] Administration: Page statiques > Options -> ajout champ pour définir le contenu de la balise <title>
[+] Administration: Catégories > Options -> ajout champ pour définir le contenu de la balise <title>
[+] Administration: affichage compteur des articles en attente de validation à droite du menu "Articles"
[+] Administration: compteur des commentaires hors ligne à droite du menu "commentaires" cliquable -> accès direct à la liste des commentaires hors ligne.
[+] Administration: Edition des commentaires -> possibilité de modifier la date/heure des commentaires
[+] Administration: Gestionnaire de médias: ajout du format ogg dans la liste des fichiers autorisés
[+] Administration: Prise en compte du fuseau horaire dans le javascript de l'icone calendrier
[+] Core: réécriture de la gestion des fuseaux horaires
[+] Core: déplacement du hook plxShowPagination
[+] Core: prise en compte de la valeur localhost dans le champ url des pages statiques
[+] Core: ajout du hook IndexBegin
[+] Core: ajout de la classe plxTimezones (fichier class.plx.timezones.php)